--- a/latestNewsSub2.html
+++ b/latestNewsSub2.html
@@ -170,7 +170,7 @@
             </div>
             <div class="col-md-10">
                 <div class="news">
-                    <h4><span class="badge text-bg-danger">LOCAL NEWS</span></h4>
+                    <h4><span class="badge text-bg-danger">INCIDENT</span></h4>
                     <h1>P7.01 million shabu, P3.1 million kush seized</h1>
                     <p>Ramon Efren Lazaro, Emmanuel Tupas | May 15, 2024 | 12:00am</p>
                     <div class="card-body">
