--- a/latestNewsSub3.html
+++ b/latestNewsSub3.html
@@ -170,7 +170,7 @@
             </div>
             <div class="col-md-10">
                 <div class="news">
-                    <h4><span class="badge text-bg-danger">LOCAL NEWS</span></h4>
+                    <h4><span class="badge text-bg-danger">FLASH REPORT</span></h4>
                     <h1>SC seeks DoTr response on PISTON-led petition vs PUVMP</h1>
                     <p>Ian Laqui | May 15, 2024 | 10:10am</p>
                     <div class="card-body">
