--- a/latestNewsSub4.html
+++ b/latestNewsSub4.html
@@ -170,7 +170,7 @@
             </div>
             <div class="col-md-10">
                 <div class="news">
-                    <h4><span class="badge text-bg-danger">LOCAL NEWS</span></h4>
+                    <h4><span class="badge text-bg-danger">CURRENT NEWS</span></h4>
                     <h1>DFA probes ‘illegal’ activities by diplomats</h1>
                     <p> Philstar.com | May 13, 2024 | 4:25pm </p>
                     <div class="card-body">
