--- a/showbizNewsSub1.html
+++ b/showbizNewsSub1.html
@@ -158,7 +158,7 @@
         font-size: 18px;
         color: #333;
     }
-    
+
     .news1 h5:hover {
         margin: 0;
         font-size: 18px;
@@ -186,7 +186,7 @@
             </div>
             <div class="col-12 col-md-8">
                 <div class="news">
-                    <h4><span class="badge text-bg-danger">ENTERTAINMENT</span></h4>
+                    <h4><span class="badge text-bg-danger">GOOD VIBES</span></h4>
                     <h1>Tomadora, mukbanger in real life?’: Maris Racal, Anthony Jennings react to their SnoRene characters</h1>
                     <p>By: Deni Rose M. Afinidad-Bernardo | May 15, 2024 | 12:33pm</p>
                     <div class="card-body">
