--- a/showbizNewsSub2.html
+++ b/showbizNewsSub2.html
@@ -186,7 +186,7 @@
             </div>
             <div class="col-12 col-md-8">
                 <div class="news">
-                    <h4><span class="badge text-bg-danger">ENTERTAINMENT</span></h4>
+                    <h4><span class="badge text-bg-danger">GOOD VIBES</span></h4>
                     <h1>'Tao Po': Darren Espanto, may isa pang pangarap na gustong matupad</h1>
                     <p>By: ABS-CBN News | May 15, 2024 | 01:07pm</p>
                     <div class="card-body">
