--- a/sportsNewsSub1.html
+++ b/sportsNewsSub1.html
@@ -171,7 +171,7 @@
             </div>
             <div class="col-12 col-md-8">
                 <div class="news">
-                    <h4><span class="badge text-bg-danger">SPORTS</span></h4>
+                    <h4><span class="badge text-bg-danger">LOCAL SPORTS</span></h4>
                     <h1>Belen, Solomon take charge as National U clinches UAAP Season 86 women’s volleyball title</h1>
                     <p>By: Rom Anzures | May 15, 2024 | 07:58pm</p>
                     <div class="card-body">
