--- a/sportsNewsSub2.html
+++ b/sportsNewsSub2.html
@@ -171,7 +171,7 @@
             </div>
             <div class="col-12 col-md-8">
                 <div class="news">
-                    <h4><span class="badge text-bg-danger">SPORTS</span></h4>
+                    <h4><span class="badge text-bg-danger">PARIS OLYMPICS 2024</span></h4>
                     <h1>The Olympics are nearly here. For a weary world, they can't come soon enough</h1>
                     <p>By: Daniel Arkin | April 17, 2024 | 5:00 PM GMT+</p>
                     <div class="card-body">
