--- a/sportsNewsSub3.html
+++ b/sportsNewsSub3.html
@@ -171,7 +171,7 @@
             </div>
             <div class="col-12 col-md-8">
                 <div class="news">
-                    <h4><span class="badge text-bg-danger">SPORTS</span></h4>
+                    <h4><span class="badge text-bg-danger">PBA BASKETBALL GAME</span></h4>
                     <h1>TPBA: San Miguel avoids upset, ousts TerraFirma for semis spot</h1>
                     <p>By:  ABS-CBN News | May 15, 2024 | 06:56pm PHT</p>
                     <img src="assets/1715770457867PBA Images9.jpg" class="img-fluid mb-3" width="100%">
