--- a/sportsNewsSub1.html
+++ b/sportsNewsSub1.html
@@ -211,6 +211,7 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
+                                <h6><span style="font-size: 12px;" class="badge">PARIS OLYMPICS 2024</span></h6>
                                 <a href="sportsNewsSub2.html"><h6 class="card-title">The Olympics are nearly here. For a weary world, they can't come soon enough</h6></a>
                                 <p class="card-text"><small class="text-body-secondary" style="font-size: 0.8em;">April 17, 2024 | 5:00 PM </small></p>
                             </div>
@@ -227,6 +228,7 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
+                                <h6><span style="font-size: 12px;" class="badge">PBA GAME</span></h6>
                                 <a href="sportsNewsSub3.html"><h6 class="card-title">PBA: San Miguel avoids upset, ousts TerraFirma for semis spot</h6></a>
                                 <p class="card-text"><small class="text-body-secondary" style="font-size: 0.8em;">May 15, 2024 | 06:56 PM</small></p>
                             </div>
