--- a/sportsNewsSub3.html
+++ b/sportsNewsSub3.html
@@ -171,7 +171,7 @@
             </div>
             <div class="col-12 col-md-8">
                 <div class="news">
-                    <h4><span class="badge text-bg-danger">PBA BASKETBALL GAME</span></h4>
+                    <h4><span class="badge text-bg-danger">PBA GAME</span></h4>
                     <h1>TPBA: San Miguel avoids upset, ousts TerraFirma for semis spot</h1>
                     <p>By:  ABS-CBN News | May 15, 2024 | 06:56pm PHT</p>
                     <img src="assets/1715770457867PBA Images9.jpg" class="img-fluid mb-3" width="100%">
@@ -215,6 +215,7 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
+                                <h6><span style="font-size: 12px;" class="badge">PARIS OLYMPICS 2024</span></h6>
                                 <a href="sportsNewsSub2.html"><h6 class="card-title">The Olympics are nearly here. For a weary world, they can't come soon enough</h6></a>
                                 <p class="card-text"><small class="text-body-secondary" style="font-size: 0.8em;">April 17, 2024 | 5:00 PM </small></p>
                             </div>
@@ -230,6 +231,7 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
+                                <h6><span style="font-size: 12px;" class="badge">LOCAL SPORTS</span></h6>
                                 <a href="sportsNewsSub1.html"><h6 class="card-title">Belen, Solomon take charge as National U clinches UAAP Season 86 women’s volleyball title</h6></a>
                                 <p class="card-text"><small class="text-body-secondary" style="font-size: 0.8em;">May 15, 2024 | 07:58pm </small></p>
                             </div>
