--- a/showbizNewsSub3.html
+++ b/showbizNewsSub3.html
@@ -234,17 +234,20 @@
                             <li class="list-group-item news1"><img src="assets/snorine.png" class="img-fluid" width="100%">
                                 <a href="showbizNewsSub1.html"><h5> Tomadora, mukbanger in real life?’: Maris Racal, Anthony Jennings react to their SnoRene characters</h5></a>
                                 <p style="font-size: 11px;">May 15, 2024 | 12:33pm</p>
+                                <h6><span style="font-size: 12px;" class="badge">GOOD VIBES</span></h6>
                             </li>
                         </li>
                         <li class="list-group-item">
                             <li class="list-group-item news1"><img src="assets/darren.png" class="img-fluid" width="100%">
                                 <a href="showbizNewsSub2.html"><h5>'Tao Po': Darren Espanto, may isa pang pangarap na gustong matupad</h5></a>
                                 <p style="font-size: 11px;">May 15, 2024 | 01:07pm</p>
+                                <h6><span style="font-size: 12px;" class="badge">GOOD VIBES</span></h6>
                             </li>
                         </li>
                         <li class="list-group-item news1"><img src="assets/nino-muhlach-boss-toyo_2024-05-14_14-29-02.jpg" class="img-fluid" width="100%">
                             <a href="showbizNewsSub4.html"><h5>Nino Muhlach sells FAMAS trophy to Boss Toyo </h5></a>
                             <p style="font-size: 11px;">May 14, 2024 | 2:28pm</p>
+                            <h6><span style="font-size: 12px;" class="badge">ENTERTAINMENT</span></h6>
                         </li>
                     </ul>
                 </div>
