--- a/showbizNewsSub4.html
+++ b/showbizNewsSub4.html
@@ -235,17 +235,20 @@
                             <li class="list-group-item news1"><img src="assets/snorine.png" class="img-fluid" width="100%">
                                 <a href="showbizNewsSub1.html"><h5> Tomadora, mukbanger in real life?’: Maris Racal, Anthony Jennings react to their SnoRene characters</h5></a>
                                 <p style="font-size: 11px;">May 15, 2024 | 12:33pm</p>
+                                <h6><span style="font-size: 12px;" class="badge">GOOD VIBES</span></h6>
                             </li>
                         </li>
                         <li class="list-group-item">
                             <li class="list-group-item news1"><img src="assets/darren.png" class="img-fluid" width="100%">
                                 <a href="showbizNewsSub2.html"><h5>'Tao Po': Darren Espanto, may isa pang pangarap na gustong matupad</h5></a>
                                 <p style="font-size: 11px;">May 15, 2024 | 01:07pm</p>
+                                <h6><span style="font-size: 12px;" class="badge">GOOD VIBES</span></h6>
                             </li>
                         </li>
                         <li class="list-group-item news1"><img src="assets/ent1-alden-richards-kathryn-bernardo-3_2019-08-14_17-39-51.jpg" class="img-fluid" width="100%">
                             <a href="showbizNewsSub3.html"><h5>Kathryn Bernardo, Alden Richards hailed Box Office Queen, King </h5></a>
                             <p style="font-size: 11px;">May 14, 2024 | 10:05am</p>
+                            <h6><span style="font-size: 12px;" class="badge">ENTERTAINMENT</span></h6>
                         </li>
                     </ul>
                 </div>
