--- a/weatherNewsSub1.html
+++ b/weatherNewsSub1.html
@@ -99,22 +99,14 @@
         font-size: 0.75rem;
         font-weight: 600;
     }
-    .custom-btn {
-        display: inline-block;
-        padding: 0.5rem 1rem;
-        font-size: 1rem;
-        font-weight: bold;
+    a {
         text-decoration: none;
-        color: #fff;
-        background-color: #007bff;
-        border: none;
-        border-radius: 0.5rem;
-        transition: background-color 0.3s ease-in-out;
+        color: #333;
     }
-
-    .custom-btn:hover {
-        background-color: #0056b3;
+    .btn{
+        color:#cc2d2d;
     }
+    
 
 
 
@@ -157,32 +149,45 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card mb-4">
+                        <h6><span class="badge bg-danger">Current Weather Issues</span></h6>
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h6><span class="badge bg-danger">Current Weather Issue</span></h6>
                             <h5 class="card-title">P7.01 million shabu, P3.1 million kush seized</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="custom-btn">Read more</a>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the cards content.</p>
+                            <a href="latestNewsSub2.html" class="btn btn-link">Read more</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card mb-4">
+                        <h6><span class="badge bg-danger">El Nino Effect and Updates</span></h6>
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="custom-btn">Read more</a>
+                            <h5 class="card-title">P7.01 million shabu, P3.1 million kush seized</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the cards content.</p>
+                            <a href="latestNewsSub2.html" class="btn btn-link">Read more</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card mb-4">
+                        <h6><span class="badge bg-danger">El Nino Effect and Updates</span></h6>
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="custom-btn">Read more</a>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the cards content.</p>
+                            <a href="latestNewsSub2.html" class="btn btn-link">Read more</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <h6><span class="badge bg-danger">Pag-Asa weather forecast news</span></h6>
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the cards content.</p>
+                            <a href="latestNewsSub2.html" class="btn btn-link">Read more</a>
                         </div>
                     </div>
                 </div>
