--- a/weatherNewsSub1.html
+++ b/weatherNewsSub1.html
@@ -164,17 +164,19 @@
             
             </div>
         </div>
+        <br><br><br><br><br>
 
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
                     <div class="card mb-3">
-                        <h6><span class="badge bg-danger">Current Weather Issues</span></h6>
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="assets/1715726549248weather-05152024.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">P7.01 million shabu, P3.1 million kush seized</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the cards content.</p>
+                            <h5 class="card-title">Sweltering heat across Asia was 45 times more likely because of climate change, study finds</h5>
+                            <p class="card-text"><b>BENGALURU, India (AP)</b> — Sizzling heat across Asia and the Middle East in late April that echoed last year's destructive swelter was made 45 times more likely in some parts of the continent because of human-caused climate change, a study Tuesday found.</p>
                             <a href="latestNewsSub2.html" class="btn btn-link">Read more</a>
+                            <br><br>
+                            <h6><span class="badge bg-danger">Current Weather Issues</span></h6>
                         </div>
                     </div>
                 </div>
