--- a/weatherNewsSub1.html
+++ b/weatherNewsSub1.html
@@ -168,8 +168,8 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
-                    <div class="card mb-3">
+                <div class="col-md-4">
+                    <div class="card mb-4">
                         <img src="assets/1715726549248weather-05152024.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Sweltering heat across Asia was 45 times more likely because of climate change, study finds</h5>
@@ -180,30 +180,21 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="card mb-3">
+                <div class="col-md-4">
+                    <div class="card mb-4">
                         <h6><span class="badge bg-danger">El Nino Effect and Updates</span></h6>
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">P7.01 million shabu, P3.1 million kush seized</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the cards content.</p>
+                            <h5 class="card-title">El Niño weakens but 47 provinces may still experience drought</h5>
+                            <p class="card-text"><b>MANILA</b> — Hot and dry conditions from the weakening El Niño may still lead to 47 provinces experiencing drought this May, PAGASA said in an advisory.
+
+                                Of these provinces, 23 are in Luzon, 15 in Visayas, and nine in Mindanao. Meanwhile, seven provinces may be under a dry spell and eight may experience dry condition.</p>
                             <a href="latestNewsSub2.html" class="btn btn-link">Read more</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="card mb-3">
-                        <h6><span class="badge bg-danger">El Nino Effect and Updates</span></h6>
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the cards content.</p>
-                            <a href="latestNewsSub2.html" class="btn btn-link">Read more</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card mb-3">
+                <div class="col-md-4">
+                    <div class="card mb-4">
                         <h6><span class="badge bg-danger">Pag-Asa weather forecast news</span></h6>
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
