--- a/weatherNewsSub2.html
+++ b/weatherNewsSub2.html
@@ -167,22 +167,16 @@
             </div>
             <div class="col-md-11">
                 <div class="news">
-                    <h4><span class="badge text-bg-danger">CURRENT WEATHER ISSUES</span></h4>
-                    <h1>Paglabas ng mga gamo-gamo, senyales ng paparating na tag-ulan</h1>
-                    <p> By: ABSCBN News | May 15, 2024 | 08:49 PM </p>
+                    <h4><span class="badge text-bg-danger">EL NINO EFFECT AND UPDATES</span></h4>
+                    <h1>El Niño weakens but 47 provinces may still experience drought</h1>
+                    <p> By: Ariel Rojas | May 09, 2024 | 04:58pm </p>
                     <div class="card-body">
-                        <div class="container">
-                            <div class="row">
-                              <div class="col-12">
-                                <div class="ratio ratio-16x9">
-                                    <iframe width="900" height="506" src="https://www.youtube.com/embed/EEgeCSsToyw" title="Paglabas ng mga gamo-gamo, senyales ng paparating na tag-ulan | TV Patrol" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                                </div>
-                           </div>
-                        </div>
-                    </div>
-                    <div class="card-body">
+                        <img src="assets/171524326899120240422-earth-environment-heat-index-JC-1020.jpg" class="img-fluid mb-3" width="100%">
+                        <p class="card-text"><b>A woman uses a fan as she stays indoors  as people try to deal with the heat as they travel in Navotas City on April 22, 2024. Jonathan Cellona, ABS-CBN News/file</b>
                         <div class="text">
-                            <p>Matinding init ang naranasan ngayong Abril dahil sa El Niño. At kahit madalas na ang pag-ulan sa hapon at gabi, sinasabing posibleng maantala ang pagpasok ng tag-ulan sa bansa dahil naman sa pabuong La Niña. Nagpa-Patrol, Ariel Rojas. <b>TV Patrol, Miyerkules, 15 Mayo 2024.</b></p>
+                            <p><b>MANILA</b>— Hot and dry conditions from the weakening El Niño may still lead to 47 provinces experiencing drought this May, PAGASA said in an advisory.
+
+                                Of these provinces, 23 are in Luzon, 15 in Visayas, and nine in Mindanao. Meanwhile, seven provinces may be under a dry spell and eight may experience dry condition.</b></p>
                         </div>
                     </div>
                 </div>
@@ -250,7 +244,7 @@
                 <div class="col">
                     <nav aria-label="breadcrumb" class="text-center">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="#"></a>Current Weather Issues</li>
+                            <li class="breadcrumb-item"><a href="weatherNewsSub1.html"></a>Current Weather Issues</li>
                             <li class="breadcrumb-item"><a href="#"></a>El Nino Effect and Updates</li>
                             <li class="breadcrumb-item active" aria-current="page">PAGASA Weather Forecast</li>
                         </ol>
