--- a/weatherNewsSub2.html
+++ b/weatherNewsSub2.html
@@ -177,6 +177,29 @@
                             <p><b>MANILA</b>— Hot and dry conditions from the weakening El Niño may still lead to 47 provinces experiencing drought this May, PAGASA said in an advisory.
 
                                 Of these provinces, 23 are in Luzon, 15 in Visayas, and nine in Mindanao. Meanwhile, seven provinces may be under a dry spell and eight may experience dry condition.</b></p>
+                            <p>Drought happens when there is more than 60 percent reduction in rainfall for three consecutive months. Below normal rains in two consecutive months is considered dry condition and in three consecutive months a dry spell. </p>
+                            <p>The weather bureau still anticipates the transition from El Niño to neutral conditions this May or June. La Niña watch, however, remains in place as the likelihood of La Niña developing in the second half of the year remains at 60 percent. </p>
+                            <p>El Niño and La Niña are the warm and cold phases of a naturally occurring climate pattern known as the El Niño-Southern Oscillation (ENSO). It is manifested in the changes in the sea surface temperature and wind strength and direction in the equatorial Pacific Ocean. </p>
+                            <p>El Niño leads to less rains and tropical cyclones and drier conditions in the Philippines while La Niña results to above normal rains, more storms, and wetter conditions. </p>
+                            <p>PAGASA said the combined impacts of El Niño and the dry season resulted to 46 provinces experiencing drought, 19 under dry spell, and nine experiencing dry condition this April. </p>
+                            <p>State of calamity has been declared in one region, seven provinces, and 36 cities and municipalities with estimated cost of damage and losses to agriculture amounting to 5.9 billion pesos, per reports from the National Disaster Risk Reduction and Management Council and the Department of Agriculture. </p>
+                            <p><b>RECORD-BREAKING APRIL HEAT</b></p>
+                            <p>San Jose, Occidental Mindoro: 39.2°C, April 22</p>
+                            <ul>
+                                <li>Clark, Pampanga: 39.1°C, April 29</li>
+                                <li>NAIA, Pasay City: 38.8°C, April 27</li>
+                                <li>Sangley Point, Cavite City: 38.7°C, April 25</li>
+                                <li>Science Garden, Quezon City: 38.2°C, April 27</li>
+                                <li>Casiguran, Aurora: 38.1°C, April 24</li>
+                                <li>Catbalogan City, Samar: 37.6°C, April 30</li>
+                                <li>Malaybalay City, Bukidnon: 37.5°C, April 25</li>
+                                <li>Maasin City, Leyte: 36.5°C, April 25</li>
+                            </ul>
+                            <p>The temperatures logged in Clark, Pasay, and Malaybalay are also the new all-time record for the respective stations. </p>
+                            <p>This May, temperatures could also still soar up to 40.8°C in Northern Luzon, 38.3°C in Metro Manila and the lowlands of Mindanao, and 37.5°C in the Visayas. </p>
+                            <p>Below-normal rains are forecast over most parts of Luzon and Visayas while near-normal conditions will be felt in Mindanao and Northern Luzon. </p>
+                            <p>One or two tropical cyclones may form inside or enter the Philippine area of responsibility this month. The agency is currently monitoring a cloud cluster east of Mindanao that may develop next week into the country's first weather disturbance this year. </p>
+                            <p>PAGASA also said the transition towards the southwest monsoon season may happen this May.</p>                            
                         </div>
                     </div>
                 </div>
@@ -209,12 +232,10 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card mb-4">
-                        <img src="assets/171524326899120240422-earth-environment-heat-index-JC-1020.jpg" class="card-img-top" alt="...">
+                        <img src="assets/" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">El Niño weakens but 47 provinces may still experience drought</h5>
-                            <p class="card-text"><b>MANILA</b> — Hot and dry conditions from the weakening El Niño may still lead to 47 provinces experiencing drought this May, PAGASA said in an advisory.
-
-                                Of these provinces, 23 are in Luzon, 15 in Visayas, and nine in Mindanao. Meanwhile, seven provinces may be under a dry spell and eight may experience dry condition.</p>
+                            <h5 class="card-title">Paglabas ng mga gamo-gamo, senyales ng paparating na tag-ulan</h5>
+                            <p class="card-text"><b>Matinding init ang naranasan ngayong Abril dahil sa El Niño. At kahit madalas na ang pag-ulan sa hapon at gabi, sinasabing posibleng maantala ang pagpasok ng tag-ulan sa bansa dahil naman sa pabuong La Niña. Nagpa-Patrol, Ariel Rojas. <b>TV Patrol, Miyerkules, 15 Mayo 2024.</b></p>
                             <a href="latestNewsSub2.html" class="btn btn-link">Read more</a>
                             <br><br>
                             <h6><span class="badge bg-danger">El Nino Effect and Updates</span></h6>
