--- a/weatherNewsSub1.html
+++ b/weatherNewsSub1.html
@@ -221,7 +221,7 @@
                             <p class="card-text"><b>MANILA</b> — Hot and dry conditions from the weakening El Niño may still lead to 47 provinces experiencing drought this May, PAGASA said in an advisory.
 
                                 Of these provinces, 23 are in Luzon, 15 in Visayas, and nine in Mindanao. Meanwhile, seven provinces may be under a dry spell and eight may experience dry condition.</p>
-                            <a href="latestNewsSub2.html" class="btn btn-link">Read more</a>
+                            <a href="weatherNewsSub2.html" class="btn btn-link">Read more</a>
                             <br><br>
                             <h6><span class="badge bg-danger">El Nino Effect and Updates</span></h6>
                         </div>
