--- a/weatherNewsSub2.html
+++ b/weatherNewsSub2.html
@@ -185,6 +185,7 @@
                             <p>State of calamity has been declared in one region, seven provinces, and 36 cities and municipalities with estimated cost of damage and losses to agriculture amounting to 5.9 billion pesos, per reports from the National Disaster Risk Reduction and Management Council and the Department of Agriculture. </p>
                             <p><b>RECORD-BREAKING APRIL HEAT</b></p>
                             <p>San Jose, Occidental Mindoro: 39.2°C, April 22</p>
+                            <p>
                             <ul>
                                 <li>Clark, Pampanga: 39.1°C, April 29</li>
                                 <li>NAIA, Pasay City: 38.8°C, April 27</li>
@@ -195,6 +196,7 @@
                                 <li>Malaybalay City, Bukidnon: 37.5°C, April 25</li>
                                 <li>Maasin City, Leyte: 36.5°C, April 25</li>
                             </ul>
+                            </p>
                             <p>The temperatures logged in Clark, Pasay, and Malaybalay are also the new all-time record for the respective stations. </p>
                             <p>This May, temperatures could also still soar up to 40.8°C in Northern Luzon, 38.3°C in Metro Manila and the lowlands of Mindanao, and 37.5°C in the Visayas. </p>
                             <p>Below-normal rains are forecast over most parts of Luzon and Visayas while near-normal conditions will be felt in Mindanao and Northern Luzon. </p>
@@ -232,12 +234,13 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card mb-4">
-                        <img src="assets/" class="card-img-top" alt="...">
+                        <img src="assets/images.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Paglabas ng mga gamo-gamo, senyales ng paparating na tag-ulan</h5>
-                            <p class="card-text"><b>Matinding init ang naranasan ngayong Abril dahil sa El Niño. At kahit madalas na ang pag-ulan sa hapon at gabi, sinasabing posibleng maantala ang pagpasok ng tag-ulan sa bansa dahil naman sa pabuong La Niña. Nagpa-Patrol, Ariel Rojas. <b>TV Patrol, Miyerkules, 15 Mayo 2024.</b></p>
-                            <a href="latestNewsSub2.html" class="btn btn-link">Read more</a>
+                            <p class="card-text">Matinding init ang naranasan ngayong Abril dahil sa El Niño. At kahit madalas na ang pag-ulan sa hapon at gabi, sinasabing posibleng maantala ang pagpasok ng tag-ulan sa bansa dahil naman sa pabuong La Niña. Nagpa-Patrol, Ariel Rojas. <b>TV Patrol, Miyerkules, 15 Mayo 2024.</b></p>
                             <br><br>
+                            <a href="weatherNewsSub1.html" class="btn btn-link">Read more</a>
+                            <br><br><br>
                             <h6><span class="badge bg-danger">El Nino Effect and Updates</span></h6>
                         </div>
                     </div>
