--- a/weatherNewsSub3.html
+++ b/weatherNewsSub3.html
@@ -167,22 +167,80 @@
             </div>
             <div class="col-md-11">
                 <div class="news">
-                    <h4><span class="badge text-bg-danger">CURRENT WEATHER ISSUES</span></h4>
-                    <h1>Paglabas ng mga gamo-gamo, senyales ng paparating na tag-ulan</h1>
-                    <p> By: ABSCBN News | May 15, 2024 | 08:49 PM </p>
+                    <h4><span class="badge text-bg-danger">PAGASA WEATHER UPDATE</span></h4>
+                    <h1>PAGASA: 40 areas in danger level heat index on May 16</h1>
+                    <p> By: GMA Integrated News | May 15, 2024 | 8:19pm </p>
                     <div class="card-body">
-                        <div class="container">
-                            <div class="row">
-                              <div class="col-12">
-                                <div class="ratio ratio-16x9">
-                                    <iframe width="900" height="506" src="https://www.youtube.com/embed/EEgeCSsToyw" title="Paglabas ng mga gamo-gamo, senyales ng paparating na tag-ulan | TV Patrol" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                                </div>
-                           </div>
-                        </div>
-                    </div>
-                    <div class="card-body">
+                        <img src="assets/pagasa.jpg" class="img-fluid mb-3" width="100%">
                         <div class="text">
-                            <p>Matinding init ang naranasan ngayong Abril dahil sa El Niño. At kahit madalas na ang pag-ulan sa hapon at gabi, sinasabing posibleng maantala ang pagpasok ng tag-ulan sa bansa dahil naman sa pabuong La Niña. Nagpa-Patrol, Ariel Rojas. <b>TV Patrol, Miyerkules, 15 Mayo 2024.</b></p>
+                            <p>42°C: NAIA, Pasay City</p>
+                            <p>Other Stories</p>
+                            <ul>
+                                <li>37 areas to experience 'dangerous' levels of heat on May 15</li>
+                                <li>Dangerous heat index expected in 40 areas on Tuesday</li>
+                                <li>Shear line affects parts of northern Luzon</li>
+                                <li>Tuguegarao City, Cagayan</li>
+                                <li>ISU Echague, Isabela</li>
+                                <li>Baler (Radar), Aurora</li>
+                                <li>Casiguran, Aurora</li>
+                                <li>Alabat, Quezon</li>
+                                <li>Catbalogan, Samar</li>
+                                <li>Coron, Palawan</li>
+                                <li>Puerto Princesa City, Palawan</li>
+                                <li>Aborlan, Palawan</li>
+                                <li>Daet, Camarines Norte</li>
+                                <li>Siquijor, Siquijor</li>
+                                <li>Davao City, Davao del Sur</li>
+                                <li>Surigao City, Surigao del Norte</li>
+                            </ul>
+
+                            <p>43°C:</p>
+                            <ul>
+                                <li>Sinait, Ilocos Sur</li>
+                                <li>Laoag City, Ilocos Norte</li>
+                                <li>MMSU, Batac, Ilocos Norte</li>
+                                <li>Aparri, Cagayan</li>
+                                <li>Iba, Zambales</li>
+                                <li>Cubi Point, Subic Bay, Olongapo City</li>
+                                <li>Sangley Point, Cavite</li>
+                                <li>Ambulong, Tanauan, Batangas</li>
+                                <li>San Jose, Occidental Mindoro</li>
+                                <li>Legazpi City, Albay</li>
+                                <li>Masbate City, Masbate</li>
+                                <li>Tacloban City, Leyte</li>
+                                <li>Borongan, Eastern Samar</li>
+                                <li>Dipolog, Zamboanga del Norte</li>
+                            </ul>
+
+                            <p>44°C:</p>
+                            <ul>
+                                <li>Cuyo, Palawan</li>
+                                <li>Roxas City, Capiz</li>
+                                <li>Iloilo City, Iloilo</li>
+                                <li>Dumangas, Iloilo</li>
+                                <li>Catarman, Northern Samar</li>
+                                <li>Guiuan, Eastern Samar</li>
+                                <li>Zamboanga City,  Zamboanga del Sur</li>
+                            </ul>
+
+                            <p>45°C:</p>
+                            <ul>
+                                <li>Bacnotan, La Union</li>
+                                <li>Virac (Synop), Catanduanes</li>
+                            </ul>
+
+                            <p>46°C:</p>
+                            <ul>
+                                <li>Dagupan City, Pangasinan</li>
+                                <li>CBSUA-Pili, Camarines Sur</li>
+                                <li>Butuan City, Agusan del Norte</li>
+                            </ul>
+
+                            <p>Baguio City will have the lowest heat index of 25°C.</p>
+                            <p>Heat index is the measure of the temperature that a person feels, which is different from the actual air temperature. It is computed by factoring in the humidity and the air temperature.</p>
+                            <p>PAGASA said heat cramps and heat exhaustion are likely in areas experiencing a danger level heat index, which is from 42 to 51°C. Heat stroke is also possible with continued exposure.</p>
+                            <p>The public was advised to stay hydrated, limit outdoor activity, and wear fresh clothes to avoid heat-related illnesses. —Jiselle Anne Casucian/VBL, GMA Integrated News</p>
+                                                    
                         </div>
                     </div>
                 </div>
@@ -215,6 +273,19 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card mb-4">
+                        <img src="assets/images.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Paglabas ng mga gamo-gamo, senyales ng paparating na tag-ulan</h5>
+                            <p class="card-text">Matinding init ang naranasan ngayong Abril dahil sa El Niño. At kahit madalas na ang pag-ulan sa hapon at gabi, sinasabing posibleng maantala ang pagpasok ng tag-ulan sa bansa dahil naman sa pabuong La Niña. Nagpa-Patrol, Ariel Rojas. <b>TV Patrol, Miyerkules, 15 Mayo 2024.</b></p>
+                            <br><br>
+                            <a href="weatherNewsSub1.html" class="btn btn-link">Read more</a>
+                            <br><br><br>
+                            <h6><span class="badge bg-danger">El Nino Effect and Updates</span></h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4">
                         <img src="assets/171524326899120240422-earth-environment-heat-index-JC-1020.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">El Niño weakens but 47 provinces may still experience drought</h5>
@@ -227,20 +298,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="card mb-4">
-                        <img src="assets/pagasa.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">PAGASA: 40 areas in danger level heat index on May 16</h5>
-                            <p class="card-text">Forty areas may experience a heat index at the danger level on Thursday, the state weather bureau PAGASA said. 
-                                These areas, according to PAGASA's heat index forecast issued at 5 p.m. Wednesday, are the following:</p>
-                                <br>
-                            <a href="latestNewsSub3.html" class="btn btn-link">Read more</a>
-                            <br><br>
-                            <h6><span class="badge bg-danger">PAGASA Weather Forecast</span></h6>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
 
@@ -250,7 +307,7 @@
                 <div class="col">
                     <nav aria-label="breadcrumb" class="text-center">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="#"></a>Current Weather Issues</li>
+                            <li class="breadcrumb-item"><a href="weatherNewsSub1.html"></a>Current Weather Issues</li>
                             <li class="breadcrumb-item"><a href="#"></a>El Nino Effect and Updates</li>
                             <li class="breadcrumb-item active" aria-current="page">PAGASA Weather Forecast</li>
                         </ol>
