--- a/weatherNewsSub2.html
+++ b/weatherNewsSub2.html
@@ -269,8 +269,8 @@
                     <nav aria-label="breadcrumb" class="text-center">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="weatherNewsSub1.html"></a>Current Weather Issues</li>
-                            <li class="breadcrumb-item"><a href="#"></a>El Nino Effect and Updates</li>
-                            <li class="breadcrumb-item active" aria-current="page">PAGASA Weather Forecast</li>
+                            <li class="breadcrumb-item"><a href="weatherNewsSub2.html"></a>El Nino Effect and Updates</li>
+                            <li class="breadcrumb-item"><a href="weatherNewsSub3.html"></a>PAGASA Weather Forecast</li>
                         </ol>
                     </nav>
                 </div>
